# GravitySim

./: .gitignore  CMakeLists.txt  file.json  gui.txt  imgui.ini
include/: CameraView.hpp  Object.hpp  SaveManager.hpp  imgui_notifications.hpp
src/: CameraView.cpp  Object.cpp  SaveManager.cpp  main.cpp
